Project

General

Profile

Actions

Bug #19898

closed

rgw: fix lc list failure when shards not be all created

Added by Jiaying Ren almost 7 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Default lc shard is 32, if we had created few lc config,that all been
sharded to lc.31, then radosgw-admin lc list failed by can't find
lc.0.

Actions #2

Updated by Nathan Cutler almost 7 years ago

  • Project changed from Ceph to rgw
  • Category deleted (22)
Actions #3

Updated by Nathan Cutler almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Daniel Gryniewicz about 4 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF