rgw: fix lc list failure when shards not be all created

Default lc shard is 32, if we had created few lc config,that all been
sharded to lc.31, then `radosgw-admin lc list` failed by can't find
lc.0.

Fixes: http://tracker.ceph.com/issues/19898

Signed-off-by: Jiaying Ren <jiaying.ren@umcloud.com>